--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "pruebagooglenodejs",
+  "name": "georeports",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -11,11 +11,23 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "body-parser": "^1.19.0",
+    "bootstrap": "^4.6.0",
+    "connect-flash": "^0.1.1",
+    "cookieparser": "^0.1.0",
+    "cors": "^2.8.5",
+    "cross-env": "^7.0.3",
+    "dotenv": "^8.6.0",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
+    "express-session": "^1.17.1",
     "google-spreadsheet": "^3.1.15",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "passport": "^0.4.1",
+    "passport-local": "^1.0.0",
+    "pg": "^8.6.0",
+    "sweetalert": "^2.1.2"
   },
   "devDependencies": {
     "nodemon": "^2.0.7"
